--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
   height: 100vh;
   animation: gradient 15s ease infinite;
   background-size: 400% 400%;
-  overflow-x: none;
+  overflow-x: hidden;
 }
 
 code {
