--- a/src/styles/contact.module.scss
+++ b/src/styles/contact.module.scss
@@ -3,6 +3,8 @@
   margin-top: 100px;
   text-align: center;
   margin-bottom: 50px;
+  display: flex;
+  flex-direction: column;
   h1 {
     letter-spacing: 10px;
     color: hsl(230, 100%, 95%);
@@ -63,7 +65,6 @@
   }
   .contactFormContainer {
     box-shadow: 0 0 20px 5px #48abe049;
-    margin-right: 5%;
     padding: 50px;
     display: flex;
     flex-direction: column;
@@ -141,5 +142,69 @@
   textarea::placeholder {
     color: hsla(226, 100%, 95%, 0.716);
     width: 70%;
+  }
+}
+
+@media only screen and (max-width: 1007px) and (min-width: 641px) {
+  .contactContainer {
+    .contactFormContainer {
+      padding: 40px;
+      width: 70%;
+      // margin-left: 10%;
+      margin-right: 0;
+      .submitButton {
+        font-size: 16px;
+        width: 50%;
+        height: 30px;
+      }
+    }
+    input {
+      width: 60%;
+      height: 20px;
+      font-size: 12px;
+    }
+    textarea {
+      width: 60%;
+      font-size: 12px;
+    }
+    h1 {
+      letter-spacing: 7px;
+      font-size: 1.85rem;
+    }
+    .smallText {
+      font-size: 0.9rem;
+    }
+  }
+}
+@media only screen and (max-width: 641px) {
+  .contactContainer {
+    padding: 5%;
+    .contactFormContainer {
+      padding: 40px;
+      width: 70%;
+      margin-right: 0;
+      // margin-left: 5%;
+      .submitButton {
+        font-size: 16px;
+        width: 50%;
+        height: 30px;
+      }
+    }
+    input {
+      width: 60%;
+      height: 20px;
+      font-size: 12px;
+    }
+    textarea {
+      width: 60%;
+      font-size: 12px;
+    }
+    h1 {
+      letter-spacing: 7px;
+      font-size: 1.7rem;
+    }
+    .smallText {
+      font-size: 0.9rem;
+    }
   }
 }
