--- a/src/styles/intro.module.scss
+++ b/src/styles/intro.module.scss
@@ -312,3 +312,63 @@
     }
   }
 }
+
+@media only screen and (max-width: 1007px) and (min-width: 641px) {
+  .introContainer {
+    flex-direction: column;
+    text-align: center;
+    gap: 10px;
+    .infoContainer {
+      h1 {
+        font-size: 1.8rem;
+      }
+    }
+    .imageContainer {
+      width: 200px;
+      height: 200px;
+      position: relative;
+      left: 2%;
+    }
+  }
+  .wordCarousel {
+    div {
+      li {
+        font-size: 1.7rem;
+        width: 100%;
+        margin-left: 20px;
+      }
+    }
+  }
+  .containerChevron {
+    position: relative;
+    bottom: 50px;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  .introContainer {
+    flex-direction: column;
+    text-align: center;
+    gap: 10px;
+    .infoContainer {
+      h1 {
+        font-size: 1.5rem;
+      }
+    }
+    .imageContainer {
+      width: 170px;
+      height: 170px;
+      position: relative;
+      left: 2%;
+    }
+  }
+  .wordCarousel {
+    div {
+      li {
+        font-size: 1.4rem;
+        width: 100%;
+        margin-left: 20px;
+      }
+    }
+  }
+}
