--- a/src/styles/contact.module.scss
+++ b/src/styles/contact.module.scss
@@ -5,6 +5,7 @@
   margin-bottom: 50px;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
   h1 {
     letter-spacing: 10px;
     color: hsl(230, 100%, 95%);
