--- a/src/styles/intro.module.scss
+++ b/src/styles/intro.module.scss
@@ -8,6 +8,7 @@
   align-items: center;
   justify-content: center;
   padding-top: 10%;
+  overflow-x: hidden;
   .infoContainer {
     margin-left: 10%;
     span {
