--- a/src/styles/skills.module.scss
+++ b/src/styles/skills.module.scss
@@ -3,6 +3,7 @@
   margin-top: 100px;
   text-align: center;
   margin-bottom: 50px;
+  overflow-x: hidden;
   h1 {
     letter-spacing: 10px;
     color: hsl(230, 100%, 95%);
