--- a/src/styles/intro.module.scss
+++ b/src/styles/intro.module.scss
@@ -10,6 +10,118 @@
   padding-top: 10%;
   .infoContainer {
     margin-left: 10%;
+    a {
+      position: absolute;
+      display: inline-block;
+      border-radius: 20px;
+      padding: 2px 0px;
+      color: #03e9f4;
+      text-decoration: none;
+      text-transform: uppercase;
+      transition: 0.5s;
+      letter-spacing: 3px;
+      overflow: hidden;
+      width: 20%;
+      top: 3%;
+      right: 3%;
+      font-size: 0.7rem;
+      text-align: center;
+    }
+    a:hover {
+      background: #03e9f4;
+      color: #050801;
+      box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4,
+        0 0 200px #03e9f4;
+      -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
+    }
+    a span {
+      position: absolute;
+      display: block;
+    }
+    a span:nth-child(1) {
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      background: linear-gradient(90deg, transparent, #03e9f4);
+      animation: animate1 1s linear infinite;
+    }
+    @keyframes animate1 {
+      0% {
+        left: -100%;
+      }
+      50%,
+      100% {
+        left: 100%;
+      }
+    }
+    a span:nth-child(2) {
+      top: -100%;
+      right: 0;
+      width: 2px;
+      height: 100%;
+      background: linear-gradient(180deg, transparent, #03e9f4);
+      animation: animate2 1s linear infinite;
+      animation-delay: 0.25s;
+    }
+    @keyframes animate2 {
+      0% {
+        top: -100%;
+      }
+      50%,
+      100% {
+        top: 100%;
+      }
+    }
+    a span:nth-child(3) {
+      bottom: 0;
+      right: 0;
+      width: 100%;
+      height: 2px;
+      background: linear-gradient(270deg, transparent, #03e9f4);
+      animation: animate3 1s linear infinite;
+      animation-delay: 0.5s;
+    }
+    @keyframes animate3 {
+      0% {
+        right: -100%;
+      }
+      50%,
+      100% {
+        right: 100%;
+      }
+    }
+
+    a span:nth-child(4) {
+      bottom: -100%;
+      left: 0;
+      width: 2px;
+      height: 100%;
+      background: linear-gradient(360deg, transparent, #03e9f4);
+      animation: animate4 1s linear infinite;
+      animation-delay: 0.75s;
+    }
+    @keyframes animate4 {
+      0% {
+        bottom: -100%;
+      }
+      50%,
+      100% {
+        bottom: 100%;
+      }
+    }
+    .box-container {
+      display: flex;
+      position: relative;
+      top: 20px;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      padding: 5px;
+      border-radius: 20px;
+      margin-bottom: 10px;
+    }
     span {
       font-family: "Satisfy", cursive;
       font-size: 1.2rem;
@@ -322,7 +434,12 @@
       h1 {
         font-size: 1.8rem;
       }
+      a {
+        width: 25%;
+        font-size: 0.7rem;
+      }
     }
+
     .imageContainer {
       width: 200px;
       height: 200px;
@@ -354,6 +471,15 @@
       h1 {
         font-size: 1.5rem;
       }
+      a {
+        width: 25%;
+        font-size: 0.5rem;
+        top: 65%;
+        left: 42%;
+      }
+    }
+    a {
+      width: 25%;
     }
     .imageContainer {
       width: 170px;
